--- a/context-aware/Recsys.ipynb
+++ b/context-aware/Recsys.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Context-Aware Recommendation System\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Required Libraries\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,6 +27,13 @@
     "import json\n",
     "import string\n",
     "import gc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the Dataset\n"
    ]
   },
   {
@@ -97,7 +118,7 @@
        "      <td>An Enquiry Concerning Human Understanding</td>\n",
        "      <td>David Hume</td>\n",
        "      <td>None</td>\n",
-       "      <td></td>\n",
+       "      <td>None</td>\n",
        "      <td>The argument of the Enquiry proceeds by a ser...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -127,7 +148,7 @@
        "      <td>Under Wildwood</td>\n",
        "      <td>Colin Meloy</td>\n",
        "      <td>2012-09-25</td>\n",
-       "      <td></td>\n",
+       "      <td>None</td>\n",
        "      <td>Prue McKeel, having rescued her brother from ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -157,7 +178,7 @@
        "      <td>America Again: Re-becoming The Greatness We Ne...</td>\n",
        "      <td>Stephen Colbert</td>\n",
        "      <td>2012-10-02</td>\n",
-       "      <td></td>\n",
+       "      <td>None</td>\n",
        "      <td>Colbert addresses topics including Wall Stree...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -206,13 +227,13 @@
        "0      1945-08-17  roman-à-clef satire childrens-literature specu...   \n",
        "1            1962  science-fiction novella speculative-fiction ut...   \n",
        "2            1947     existentialism fiction absurdist-fiction novel   \n",
-       "3            None                                                      \n",
+       "3            None                                               None   \n",
        "4            None  hard-science-fiction science-fiction speculati...   \n",
        "...           ...                                                ...   \n",
-       "16554  2012-09-25                                                      \n",
+       "16554  2012-09-25                                               None   \n",
        "16555  2000-06-01                                   thriller fiction   \n",
        "16556  2010-11-16                                      autobiography   \n",
-       "16557  2012-10-02                                                      \n",
+       "16557  2012-10-02                                               None   \n",
        "16558        1846               epistolary-novel speculative-fiction   \n",
        "\n",
        "                                                 summary  \n",
@@ -237,6 +258,357 @@
     }
    ],
    "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare the Dataset for ML\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=[\"wikipedia_ID\", \"freebase_ID\", \"pub_date\"], axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Animal Farm</td>\n",
+       "      <td>George Orwell</td>\n",
+       "      <td>roman-à-clef satire childrens-literature specu...</td>\n",
+       "      <td>Old Major, the old boar on the Manor Farm, ca...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A Clockwork Orange</td>\n",
+       "      <td>Anthony Burgess</td>\n",
+       "      <td>science-fiction novella speculative-fiction ut...</td>\n",
+       "      <td>Alex, a teenager living in near-future Englan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Plague</td>\n",
+       "      <td>Albert Camus</td>\n",
+       "      <td>existentialism fiction absurdist-fiction novel</td>\n",
+       "      <td>The text of The Plague is divided into five p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>An Enquiry Concerning Human Understanding</td>\n",
+       "      <td>David Hume</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The argument of the Enquiry proceeds by a ser...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A Fire Upon the Deep</td>\n",
+       "      <td>Vernor Vinge</td>\n",
+       "      <td>hard-science-fiction science-fiction speculati...</td>\n",
+       "      <td>The novel posits that space around the Milky ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16554</th>\n",
+       "      <td>Under Wildwood</td>\n",
+       "      <td>Colin Meloy</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Prue McKeel, having rescued her brother from ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16555</th>\n",
+       "      <td>Transfer of Power</td>\n",
+       "      <td>Vince Flynn</td>\n",
+       "      <td>thriller fiction</td>\n",
+       "      <td>The reader first meets Rapp while he is doing...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16556</th>\n",
+       "      <td>Decoded</td>\n",
+       "      <td>Jay-Z</td>\n",
+       "      <td>autobiography</td>\n",
+       "      <td>The book follows very rough chronological ord...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16557</th>\n",
+       "      <td>America Again: Re-becoming The Greatness We Ne...</td>\n",
+       "      <td>Stephen Colbert</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Colbert addresses topics including Wall Stree...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16558</th>\n",
+       "      <td>Poor Folk</td>\n",
+       "      <td>Fyodor Dostoyevsky</td>\n",
+       "      <td>epistolary-novel speculative-fiction</td>\n",
+       "      <td>Makar Devushkin and Varvara Dobroselova are s...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16559 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   title              author  \\\n",
+       "0                                            Animal Farm       George Orwell   \n",
+       "1                                     A Clockwork Orange     Anthony Burgess   \n",
+       "2                                             The Plague        Albert Camus   \n",
+       "3              An Enquiry Concerning Human Understanding          David Hume   \n",
+       "4                                   A Fire Upon the Deep        Vernor Vinge   \n",
+       "...                                                  ...                 ...   \n",
+       "16554                                     Under Wildwood         Colin Meloy   \n",
+       "16555                                  Transfer of Power         Vince Flynn   \n",
+       "16556                                            Decoded               Jay-Z   \n",
+       "16557  America Again: Re-becoming The Greatness We Ne...     Stephen Colbert   \n",
+       "16558                                          Poor Folk  Fyodor Dostoyevsky   \n",
+       "\n",
+       "                                                  genres  \\\n",
+       "0      roman-à-clef satire childrens-literature specu...   \n",
+       "1      science-fiction novella speculative-fiction ut...   \n",
+       "2         existentialism fiction absurdist-fiction novel   \n",
+       "3                                                   None   \n",
+       "4      hard-science-fiction science-fiction speculati...   \n",
+       "...                                                  ...   \n",
+       "16554                                               None   \n",
+       "16555                                   thriller fiction   \n",
+       "16556                                      autobiography   \n",
+       "16557                                               None   \n",
+       "16558               epistolary-novel speculative-fiction   \n",
+       "\n",
+       "                                                 summary  \n",
+       "0       Old Major, the old boar on the Manor Farm, ca...  \n",
+       "1       Alex, a teenager living in near-future Englan...  \n",
+       "2       The text of The Plague is divided into five p...  \n",
+       "3       The argument of the Enquiry proceeds by a ser...  \n",
+       "4       The novel posits that space around the Milky ...  \n",
+       "...                                                  ...  \n",
+       "16554   Prue McKeel, having rescued her brother from ...  \n",
+       "16555   The reader first meets Rapp while he is doing...  \n",
+       "16556   The book follows very rough chronological ord...  \n",
+       "16557   Colbert addresses topics including Wall Stree...  \n",
+       "16558   Makar Devushkin and Varvara Dobroselova are s...  \n",
+       "\n",
+       "[16559 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Animal Farm</td>\n",
+       "      <td>George Orwell</td>\n",
+       "      <td>roman-à-clef satire childrens-literature specu...</td>\n",
+       "      <td>Old Major, the old boar on the Manor Farm, ca...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A Clockwork Orange</td>\n",
+       "      <td>Anthony Burgess</td>\n",
+       "      <td>science-fiction novella speculative-fiction ut...</td>\n",
+       "      <td>Alex, a teenager living in near-future Englan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Plague</td>\n",
+       "      <td>Albert Camus</td>\n",
+       "      <td>existentialism fiction absurdist-fiction novel</td>\n",
+       "      <td>The text of The Plague is divided into five p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A Fire Upon the Deep</td>\n",
+       "      <td>Vernor Vinge</td>\n",
+       "      <td>hard-science-fiction science-fiction speculati...</td>\n",
+       "      <td>The novel posits that space around the Milky ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>All Quiet on the Western Front</td>\n",
+       "      <td>Erich Maria Remarque</td>\n",
+       "      <td>war-novel roman-à-clef</td>\n",
+       "      <td>The book tells the story of Paul Bäumer, a Ge...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16549</th>\n",
+       "      <td>The Third Lynx</td>\n",
+       "      <td>Timothy Zahn</td>\n",
+       "      <td>science-fiction</td>\n",
+       "      <td>The story starts with former government agent...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16551</th>\n",
+       "      <td>Remote Control</td>\n",
+       "      <td>Andy McNab</td>\n",
+       "      <td>thriller fiction suspense</td>\n",
+       "      <td>The series follows the character of Nick Ston...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16555</th>\n",
+       "      <td>Transfer of Power</td>\n",
+       "      <td>Vince Flynn</td>\n",
+       "      <td>thriller fiction</td>\n",
+       "      <td>The reader first meets Rapp while he is doing...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16556</th>\n",
+       "      <td>Decoded</td>\n",
+       "      <td>Jay-Z</td>\n",
+       "      <td>autobiography</td>\n",
+       "      <td>The book follows very rough chronological ord...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16558</th>\n",
+       "      <td>Poor Folk</td>\n",
+       "      <td>Fyodor Dostoyevsky</td>\n",
+       "      <td>epistolary-novel speculative-fiction</td>\n",
+       "      <td>Makar Devushkin and Varvara Dobroselova are s...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12055 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                title                author  \\\n",
+       "0                         Animal Farm         George Orwell   \n",
+       "1                  A Clockwork Orange       Anthony Burgess   \n",
+       "2                          The Plague          Albert Camus   \n",
+       "4                A Fire Upon the Deep          Vernor Vinge   \n",
+       "5      All Quiet on the Western Front  Erich Maria Remarque   \n",
+       "...                               ...                   ...   \n",
+       "16549                  The Third Lynx          Timothy Zahn   \n",
+       "16551                  Remote Control            Andy McNab   \n",
+       "16555               Transfer of Power           Vince Flynn   \n",
+       "16556                         Decoded                 Jay-Z   \n",
+       "16558                       Poor Folk    Fyodor Dostoyevsky   \n",
+       "\n",
+       "                                                  genres  \\\n",
+       "0      roman-à-clef satire childrens-literature specu...   \n",
+       "1      science-fiction novella speculative-fiction ut...   \n",
+       "2         existentialism fiction absurdist-fiction novel   \n",
+       "4      hard-science-fiction science-fiction speculati...   \n",
+       "5                                 war-novel roman-à-clef   \n",
+       "...                                                  ...   \n",
+       "16549                                    science-fiction   \n",
+       "16551                          thriller fiction suspense   \n",
+       "16555                                   thriller fiction   \n",
+       "16556                                      autobiography   \n",
+       "16558               epistolary-novel speculative-fiction   \n",
+       "\n",
+       "                                                 summary  \n",
+       "0       Old Major, the old boar on the Manor Farm, ca...  \n",
+       "1       Alex, a teenager living in near-future Englan...  \n",
+       "2       The text of The Plague is divided into five p...  \n",
+       "4       The novel posits that space around the Milky ...  \n",
+       "5       The book tells the story of Paul Bäumer, a Ge...  \n",
+       "...                                                  ...  \n",
+       "16549   The story starts with former government agent...  \n",
+       "16551   The series follows the character of Nick Ston...  \n",
+       "16555   The reader first meets Rapp while he is doing...  \n",
+       "16556   The book follows very rough chronological ord...  \n",
+       "16558   Makar Devushkin and Varvara Dobroselova are s...  \n",
+       "\n",
+       "[12055 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.dropna(axis=0, how=\"any\")\n",
     "df"
    ]
   },
