Updated Codes and Relevant comments

--- a/context-aware/Data-Cleaning.ipynb
+++ b/context-aware/Data-Cleaning.ipynb
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convert Genres Into a Easier-to-Read String\n"
+    "## Convert Genres Into a Easier-to-Process String\n"
    ]
   },
   {
@@ -344,8 +344,11 @@
     }
    ],
    "source": [
+    "# Preparation to remove Unneccessary Punctuation\n",
     "punc = string.punctuation\n",
+    "\n",
     "punc = punc.replace(\",\", \"\").replace(\"-\", \"\")\n",
+    "\n",
     "punc"
    ]
   },
@@ -1368,27 +1371,13 @@
    "source": [
     "genre = []\n",
     "for i in data.index:\n",
-    "    # print(i)\n",
-    "    # temp = []\n",
-    "    # print(data[\"genres\"][i])\n",
-    "    # print(type(data[\"genres\"][i]))\n",
     "    if (data[\"genres\"][i] == \"\") or (type(data[\"genres\"][i]) == type(np.nan)):\n",
     "        genre.append(None)\n",
     "        continue\n",
     "    d = json.loads(data[\"genres\"][i])\n",
-    "    # print(d)\n",
     "    d = np.array(list(d.values()))\n",
-    "    # print(d)\n",
     "    d = \",\".join(d).lower().replace(\" \", \"-\")\n",
-    "    # print(d)\n",
-    "    # for j in d:\n",
-    "    #     temp.append(\n",
-    "    #         j.lower().translate(str.maketrans(\"\", \"\", string.punctuation)).replace(\" \", \"-\")\n",
-    "    #     )\n",
     "    genre.append(d.replace(\",\", \" \").translate(str.maketrans(\"\", \"\", punc)))\n",
-    "    # print(genre)\n",
-    "    # genre.append(\" \".join(temp))\n",
-    "    # break\n",
     "    d = None\n",
     "    gc.collect()\n",
     "genre"
